@@ -38,6 +38,19 @@ playing the viola and hacking some code.
 </ul>
 
 
+
+<h2><tt>lilypond.org</tt> was brought to you by</h2>
+
+<ul>
+
+<li>Tineke de Munnik, Dutch translation
+
+<li>Jean-Charles Malahieude, Gauvain
+Pocentek and John Mandereau, french translation.
+
+</ul>
+
+
 <h2>Thanks to ..</h2> 
 
 .. all <a
